--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -23,18 +23,13 @@
             <section class="row text-center">
 
                 <section class = "col-lg-4">
-                    <h4 class="card-title">Post</h4>
-                    <p class="card-text">Share your thoughts about subjects that are important to you.</p>
+                    <h4 class="card-title">Create</h4>
+                    <p class="card-text">Create public wikis to share your knowledge with your fellow man!</p>
                 </section>
 
                 <section class="col-lg-4">
-                    <h4 class="card-title">Comment</h4>
-                    <p class="card-text">Your opinion counts! But you have to make yourself heard first!</p>
-                </section>
-
-                <section class="col-lg-4">
-                    <h4 class="card-title">Stay Informed</h4>
-                    <p class="card-text">See the most active topics as well as trending subjects every day!</p>
+                    <h4 class="card-title">Choose your plan</h4>
+                    <p class="card-text">Free or Premium memberships available!</p>
                 </section>
 
             </section>
