--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -16,7 +16,9 @@
             <header class="jumbotron my-4">
                 <h1 class="display-3">Welcome to Blocipedia</h1>
                 <p class="lead">A wiki of dubious usefulness</p>
-                <a href="/users/sign_up" class="btn btn-primary brn-lg">Sign up</a>
+                <% if(!currentUser) { %>
+                    <a href="/users/sign_up" class="btn btn-primary brn-lg">Sign up</a>
+                <% } %>
             </header>
 
             <!-- Page Features -->
