--- a/src/views/users/sign-in.ejs
+++ b/src/views/users/sign-in.ejs
@@ -1,26 +1,16 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
 <html>
     <head>
-       
         <% include ../static/partials/head.ejs %>
-    
     </head>
     <body>
-        
         <% include ../static/partials/navbar.ejs %>
-        
-        <main class="containter">
-        
+        <main class="container">
             <% include ../static/partials/messages.ejs %>
-
-            <h1>Sign up</h1>
+            <h1>Sign in</h1>
                 <div class="row">
                     <div class="col-md-8">
-                        <form method="POST" action="/users">
-                            <div class="form-group">
-                                <label>Name:</label>
-                                <input type="text" name="name" placeholder="Enter Name" class="form-control"/>
-                            </div>
+                        <form method="POST" action="/users/sign_in">
                             <div class="form-group">
                                 <label>Email:</label>
                                 <input type="email" name="email" placeholder="Enter Email" class="form-control"/>
@@ -29,16 +19,11 @@
                                 <label>Password:</label>
                                 <input type="password" name="password" placeholder="Enter Password" class="form-control"/>
                             </div>
-                            <div class="form-group">
-                                <label>Password:</label>
-                                <input type="password" name="password_conf" placeholder="Enter Password Confirmation" class="form-control"/>
-                            </div><br/>
-                            <input type="submit" value="Sign Up" class="btn btn-primary"/>
+                            <input type="submit" value="Sign In" class="btn btn-primary"/>
                         </form>
                     </div>
                 </div>
         </main>
-
         <% include ../static/partials/baseScripts.ejs %>
     </body>
 </html>
