--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="/">Blocipedia</a>
@@ -9,9 +10,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/wikis">Wiki</a>
+                    </li>
                     <% if(currentUser) { %>
                         <li class="nav-item">
-                            <a class="nav-link" href="/users/sign_out">Sign out</aclass>
+                            <a class="nav-link" href="/users/sign_out">Sign out</a>
                         </li>
                     <% } else { %>
                         <li class="nav-item">
