--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -8,7 +8,7 @@
         <main class="container">
             <% include ../static/partials/messages.ejs %>
             
-            <% if(currentUser.isAdmin() || currentUser.id == wiki.userId) { %>
+            <% if(currentUser) { %>
                 <h1>Edit Wiki</h1>
                 <form style="display:initial" action="/wikis/<%= wiki.id %>/update" method="post">
                     <div class="form-group">
