--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -8,6 +8,7 @@
     <main class="container">
         <h1> New Wiki</h1>
 
+        <% if(currentUser) { %>
         <form action="/wikis/create" method="post">
             <div class="form-group">
                 <label for="title">Wiki title</label>
@@ -22,6 +23,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        <% } %>
     </main>
     <% include ../static/partials/baseScripts.ejs %>
 </body>
