--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -12,8 +12,18 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/wikis">Wiki</a>
-                    </li>
+                    </li>  
                     <% if(currentUser) { %>
+                        <% if(currentUser.role == 1) { %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/users/<%= currentUser.id %>/downgrade">Downgrade</a>
+                            </li>
+                        <% } %>
+                        <% if(currentUser.role == 0) { %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/users/payment">Upgrade</a>
+                            </li>
+                        <% } %>
                         <li class="nav-item">
                             <a class="nav-link" href="/users/sign_out">Sign out</a>
                         </li>
