upgradding account checkpoint completed more

--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -16,7 +16,7 @@
                     <% if(currentUser) { %>
                         <% if(currentUser.role == 1) { %>
                             <li class="nav-item">
-                                <a class="nav-link" href="/users/<%= currentUser.id %>/downgrade">Downgrade</a>
+                                <a class="nav-link" href="/users/downgrade">Downgrade</a>
                             </li>
                         <% } %>
                         <% if(currentUser.role == 0) { %>
