--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -14,9 +14,17 @@
             <% } %>
             <ul class="list-group">
                 <% wikis.forEach((wiki) => { %>
-                    <li class="list-group-item">
-                        <a href="/wikis/<%= wiki.id %>"><%= wiki.title %></a>
-                    </li>
+                    <% if(wiki.private == true) { %>
+                        <% if(currentUser.role == 1) { %>
+                            <li class="list-group-item">
+                                <a href="/wikis/<%= wiki.id %>"><%= wiki.title %></a>
+                            </li>
+                        <% } %>
+                    <% } else { %>
+                        <li class="list-group-item">
+                            <a href="/wikis/<%= wiki.id %>"><%= wiki.title %></a>
+                        </li>
+                    <% } %>
                 <% }) %>
             </ul>
 
