--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -19,6 +19,11 @@
                         <label for="body">Body</label>
                         <textarea rows="4" class="form-control" name="body" placeholder="Enter Body"><%= wiki.body %></textarea>
                     </div>
+                    <% if(currentUser.role == 1) { %>
+                        <div class="form-group">
+                            <input type="checkbox" name="private" value="private">Private<br>
+                        </div>
+                    <% } %>
                     <button type="submit" class="btn btn-primary">Update</button>
                 </form>
             <% } %>
