--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -7,17 +7,17 @@
         <% include ../static/partials/navbar.ejs %>
 
         <main class="container">
-            <h1><%= wiki.title %></h1>
+            <h1><%= markedWiki.title %></h1>
             <% if(currentUser) { %>
-                <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
-                <% if(currentUser.isAdmin() || currentUser.id == wiki.userId) { %>
-                    <form style="display:initial" action="<%= wiki.id %>/destroy" method="post">
+                <a href="/wikis/<%= markedWiki.id %>/edit" class="btn btn-warning">Edit</a>
+                <% if(currentUser.isAdmin() || currentUser.id == markedWiki.userId) { %>
+                    <form style="display:initial" action="<%= markedWiki.id %>/destroy" method="post">
                         <button type="submit" class="btn btn-danger">Delete</button>
                     </form>
                 <% } %>
             <% } %>
 
-            <p><%= wiki.body %></p>
+            <p><%- markedWiki.body %></p>
                     
         </main>
     </body>
