--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -13,18 +13,15 @@
                 <a href="/wikis/new" class="btn btn-primary btn-lg">New Wiki</a>
             <% } %>
             <ul class="list-group">
+                <% privates.forEach((private) => { %>
+                    <li class="list-group-item">
+                        <a href="/wikis/<%= private.id %>"><%= private.title %></a>
+                    </li>
+                <% }) %>
                 <% wikis.forEach((wiki) => { %>
-                    <% if(wiki.private == true) { %>
-                        <% if(currentUser.role == 1) { %>
-                            <li class="list-group-item">
-                                <a href="/wikis/<%= wiki.id %>"><%= wiki.title %></a>
-                            </li>
-                        <% } %>
-                    <% } else { %>
-                        <li class="list-group-item">
-                            <a href="/wikis/<%= wiki.id %>"><%= wiki.title %></a>
-                        </li>
-                    <% } %>
+                    <li class="list-group-item">
+                        <a href="/wikis/<%= wiki.id %>"><%= wiki.title %></a>
+                    </li>
                 <% }) %>
             </ul>
 
